<resources>
    <string name="app_name">GO Jepang</string>
    <string name="sponsor">Sponsored by:</string>
    <string name="investor">Red Flame University</string>
    <string name="yokoso">ようこそ！</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Mobile Phone Number</string>
    <string name="password">Password</string>
    <string name="passwordConfirmation">Password Confirmation</string>
    <string name="age">Age</string>
    <string name="welcome">Welcome to Go Jepang</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="newusertext">New to Go Jepang?</string>
    <string name="createaccount">Create your account</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="languagequestion">What language do you want?</string>
    <string name="languageenglish">English</string>
    <string name="languageindonesia">Bahasa Indonesia</string>
    <string name="languagesetitlater">"You can set it later"</string>
    <string name="editprofile">Edit profile</string>
    <string name="editlanguage">Edit language</string>
    <string name="editcharacters">Edit characters</string>
    <string name="notification">Notification</string>
    <string name="changepassword">Change password</string>
    <string name="shareourapp">Share our app</string>
    <string name="reviewus">Review us</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="konnichiwa">Konnichiwa</string>
    <string name="login_with">Login as :</string>
    <string name="fill_data">Please fill the data</string>
    <string name="password_mismatch">Password didn\'t match</string>
    <string name="test">english</string>
    <string name="lesson">Lesson</string>
    <string name="card">Card</string>
    <string name="cards">cards</string>
    <string name="kanji">Kanji</string>
    <string name="kanjitest">Kanji Test</string>
    <string name="Grammar">Grammar</string>
    <string name="dailytalk">Daily Talk</string>
    <string name="jlpttest">JLPT Test</string>
    <string name="hiraganachart">Hiragana Chart</string>
    <string name="katakanachart">Katakana Chart</string>
    <string name="japaninfo">Japan Info</string>
    <string name="japanesecourseinindonesia">Japanese course in Indonesia</string>
    <string name="references">References</string>
    <string name="aboutdeveloper">About Developer</string>
    <string name="inocen">Inocen (Inovasi Cendekia Bangsa)</string>
    <string name="seedeveloperwebsite">see Inovasi Cendekia Bangsa website</string>
    <string name="aboutsponsor">About Sponsor</string>
    <string name="kelebihaninocen">STRENGTH</string>
    <string name="sponsorwebsite">see Naoyuki website</string>
    <string name="kelebihaninocen1">1. From Indonesia to Indonesia.</string>
    <string name="kelebihaninocen2">2. Have representatives office in Indonesia and Japan</string>
    <string name="kelebihaninocen3">3. Founded by alumni and professionals who have long lived in Japan (more than 14 years living in Japan)</string>
    <string name="kelebihaninocen4">4. Having international cooperation (in collaboration with companies in Japan and supported by Indonesian students abroad)</string>
    <string name="developerexplanation1">Inovasi Cendekia Bangsa or abbreviated as Inocen is startup with a social mission to help collaboration between Indonesia and Japan.</string>
    <string name="developerexplanation2">And one way to help this collaboration is to improve Japanese language skills for Indonesians both in quality and quantity.</string>
    <string name="developerexplanation3">Go Jepang© is made to help friends in learning Japanese. With this Go Japan application for learning Japanese will be easier, cheaper and more fun.</string>
    <string name="chapter1">Chapter 1</string>
    <string name="chapter2">Chapter 2</string>
    <string name="chapter3">Chapter 3</string>
    <string name="chapter4">Chapter 4</string>
    <string name="chapter5">Chapter 5</string>
    <string name="chapter6">Chapter 6</string>
    <string name="chapter7">Chapter 7</string>
    <string name="chapter8">Chapter 8</string>
    <string name="chapter9">Chapter 9</string>
    <string name="chapter10">Chapter 10</string>
    <string name="chaptertitle2">Introduction</string>
    <string name="chaptertitle3">Object</string>
    <string name="chaptertitle4">Places</string>
    <string name="chaptertitle5">Time</string>
    <string name="chaptertitle6">Adverb</string>
    <string name="chaptertitle7">Verb Intro</string>
    <string name="chaptertitle8">Verb</string>
    <string name="chaptertitle9">Adjective</string>
    <string name="chaptertitle10">Hobbies</string>
    <string name="chaptertitle1">Greetings</string>
    <string name="charactersettingquestion">Which one do you prefer? Learning by:</string>
    <string name="characterromaji">Alphabet</string>
    <string name="characterkana">Kana</string>
    <string name="characterkanji">Kanji</string>
    <string name="lessonintrospeech">In this chapter, you will learn these words:</string>
    <string name="buttonLessonIntroStart">Lets start!</string>
    <string name="newcard">NEW CARD!</string>
    <string name="kanjiintro">Kanji</string>
    <string name="levelkanji1">Level 1</string>
    <string name="levelkanji2">Level 2</string>
    <string name="levelkanji3">Level 3</string>
    <string name="levelkanji4">Level 4</string>
    <string name="levelkanji5">Level 5</string>
    <string name="levelkanji6">Level 6</string>
    <string name="levelkanji7">Level 7</string>
    <string name="levelkanji8">Level 8</string>
    <string name="levelkanji9">Level 9</string>
    <string name="levelkanji10">Level 10</string>
    <string name="levelkanji11">Level 11</string>
    <string name="levelkanji12">Level 12</string>
    <string name="levelkanji13">Level 13</string>
    <string name="levelkanji14">Level 14</string>
    <string name="levelkanji15">Level 15</string>
    <string name="levelkanji16">Level 16</string>
    <string name="levelkanji17">Level 17</string>
    <string name="levelkanji18">Level 18</string>
    <string name="levelkanji19">Level 19</string>
    <string name="levelkanji20">Level 20</string>
    <string name="levelkanji21">Level 21</string>
    <string name="levelkanji22">Level 22</string>
    <string name="levelkanji23">Level 23</string>
    <string name="levelkanji24">Level 24</string>
    <string name="levelkanji25">Level 25</string>
    <string name="levelkanji26">Level 26</string>
    <string name="levelkanji27">Level 27</string>
    <string name="levelkanji28">Level 28</string>
    <string name="levelkanji29">Level 29</string>
    <string name="levelkanji30">Level 30</string>
    <string name="levelkanji31">Level 31</string>
    <string name="levelkanji32">Level 32</string>
    <string name="levelkanji33">Level 33</string>
    <string name="levelkanji34">Level 34</string>
    <string name="levelkanji35">Level 35</string>
    <string name="levelkanji36">Level 36</string>
    <string name="kanjitesttitle">Kanji Test</string>
    <string name="kanjitestlevel1">Level 1-10</string>
    <string name="kanjitestlevel11">Level 11-20</string>
    <string name="kanjitestlevel21">Level 21-30</string>
    <string name="kanjitestlevel31">Level 31-40</string>
    <string name="kanjitestlevel41">Level 41-50</string>
    <string name="grammar">Grammar</string>
    <string name="samplesentence">Sample sentences:</string>
    <string name="pattern1">Pattern 1</string>
    <string name="pattern1kana">N + は + N + です</string>
    <string name="pattern1romaji">N + Wa + N + Desu</string>
    <string name="pattern1explanationkana">The particle は follows the topic the speaker wants to talk about. Therefore, は is often called topic marking particle.</string>
    <string name="pattern1explanationromaji">The particle は follows the topic the speaker wants to talk about. Therefore, は is often called topic marking particle.</string>
    <string name="pattern1notekana">Note : the particle は is read わ.</string>
    <string name="pattern1noteromaji">Note : the particle ha is read wa.</string>
    <string name="pattern1sample1kanji">1. 私は田中です。</string>
    <string name="pattern1sample1kana">1. わたしはやまだです。</string>
    <string name="pattern1sample1romaji">1. watashi wa yamada desu</string>
    <string name="pattern1sample1meaning">I am Tanaka.</string>
    <string name="pattern1sample2kanji">2. 私は学生です。</string>
    <string name="pattern1sample2kana">2. わたしはがくせいです。</string>
    <string name="pattern1sample2romaji">2. watashi wa gakusei desu</string>
    <string name="pattern1sample2meaning">I am a student.</string>
    <string name="pattern2">Pattern 2</string>
    <string name="pattern2kana">N + は + N + じゃ ありません</string>
    <string name="pattern2romaji">N + Wa + N + Ja Arimasen</string>
    <string name="pattern2explanationkana">じゃありません is the negative form of です. </string>
    <string name="pattern2explanationromaji">Ja arimasen is the negative form of desu. </string>
    <string name="pattern2sample1kanji">1. 私は山下じゃありません。</string>
    <string name="pattern2sample1kana">1. わたしはやましたじゃありません</string>
    <string name="pattern2sample1romaji">1, Watashi wa yamashita ja arimasen</string>
    <string name="pattern2sample1meaning">I am NOT Yamashita.</string>
    <string name="pattern2sample2kanji">2. 私は学生じゃありません。</string>
    <string name="pattern2sample2romaji">2. Watashi wa gakusei ja arimasen</string>
    <string name="pattern2sample2kana">2. わたしはがくせいじゃありません。</string>
    <string name="pattern2sample2meaning">I am NOT a student.</string>
    <string name="pattern3">Pattern 3</string>
    <string name="pattern3kana">sentence + か</string>
    <string name="pattern3romaji">sentence + ka</string>
    <string name="pattern3explanationkana">The particle か has many functions.</string>
    <string name="pattern3explanationromaji">The particle ka has many functions.</string>
    <string name="pattern3explanation1">1. Final interrogative particle, similar to a question mark "?"</string>
    <string name="pattern3explanation2">2. particle marking alternatives in a list; "or"</string>
    <string name="pattern3explanation3">3. whether (or not)</string>
    <string name="sponsorname">Naoyuki Academic Center</string>
    <string name="sponsorexplanation1">Naoyuki Academic Center was first introduced in October 2017 by the founders who are alumni of Japanese Universities and professionals who have lived in Japan for a long time. After getting extraordinary experience from Japan, the founders wanted to help other friends to go to Japan. The founders tried to solve the obstacles faced by students to go to Japan, such as: lack of information obtained by students in Indonesia, lack of confidence in students to Japan, and lack of foreign language skills, especially Japanese.
    </string>
    <string name="address">ADDRESS</string>
    <string name="addressindo">Jl.Veteran 10-11, Gd Inbis Lt 4, Univ Brawijaya, Malang.</string>
    <string name="addressjapan">Aichi ken, Nishio shi, Yonezu cho, Kitaura 75-1, Japan</string>
    <string name="sponsorexplanation2">Therefore the founders formed a forum called Naoyuki Academic Center. Naoyuki is taken from Japanese which has the implicit meaning of "honesty and happiness" in the hope of being able to realize the dream of Indonesian students to Japan, either through study, internship, study tour, or work as a professional.</string>
    <string name="sponsorprogram1">1.  English Course</string>
    <string name="sponsorprogram2">2.  Internship in Japan</string>
    <string name="sponsorprogram3">3.  Study to Japan</string>
    <string name="sponsorprogram4">4.  Study Tour</string>
    <string name="sponsorprogram5">5.  Travelling in Japan</string>
    <string name="sponsorprogram6">6.  Education Seminar</string>
</resources>