<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutSponsorActivity">

    <ImageView
        android:id="@+id/imageViewPhotoSponsor"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:src="@drawable/photo_about_sponsor"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:background="@color/colorAboutSponsor"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPhotoSponsor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:textAllCaps="true"
            android:layout_marginBottom="1dp"
            android:fontFamily="@font/latobold"
            android:textColor="@color/colorWhitePure"
            android:text="@string/aboutsponsor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageViewLogoInocen"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_logo_naoyuki"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintTop_toTopOf="@+id/linearLayout1" />

    <TextView
        android:id="@+id/textViewInocen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="@font/latomedium"
        android:text="@string/sponsorname"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogoInocen"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPhotoSponsor" />

    <ScrollView
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textViewInocen">
        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textViewExplanation1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorexplanation1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.codesgood.views.JustifiedTextView
                android:id="@+id/textViewExplanation2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorexplanation2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewExplanation1" />

            <TextView
                android:id="@+id/kelebihanInocen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/latomedium"
                android:text="PROGRAM"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewExplanation2" />

            <TextView
                android:id="@+id/kelebihanInocen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen" />

            <TextView
                android:id="@+id/kelebihanInocen2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen1" />

            <TextView
                android:id="@+id/kelebihanInocen3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram3"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen2" />

            <TextView
                android:id="@+id/kelebihanInocen4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram4"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen3" />
            <TextView
                android:id="@+id/kelebihanInocen5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram5"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen4" />
            <TextView
                android:id="@+id/kelebihanInocen6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/sponsorprogram6"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen5" />
            <TextView
                android:id="@+id/kelebihanInocen7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen6" />
            <TextView
                android:id="@+id/kelebihanInocen8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/addressindo"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen7" />
            <TextView
                android:id="@+id/kelebihanInocen9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/latomedium"
                android:text="@string/addressjapan"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen8" />
            <Button
                android:id="@+id/buttonSeeWebsite"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_button_see_sponsor_website"
                android:text="@string/sponsorwebsite"
                android:textAllCaps="false"
                android:textColor="@color/colorWhitePure"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kelebihanInocen9" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>